--- a/index.html
+++ b/index.html
@@ -16,30 +16,35 @@
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
+
   <body>
     <main>
       <section id="NavBar" class="nav-bar">
         <a href="">
           <img src="./images/logo.svg" alt="" />
         </a>
-        <div class="ham-menu">
-          <img src="./images/icon-menu.svg" alt="">
+        <div id="ham-menu" class="ham-menu">
+          <img src="./images/icon-menu.svg" alt="" />
         </div>
         <nav>
           <div class="menu">
             <ul>
-              <li id="drop-down-features" class="drop-down-features">Features<img src="./images/icon-arrow-down.svg" alt="" /></li>
-              <li id="drop-down-company" class="drop-down-company">Company<img src="./images/icon-arrow-down.svg" alt="" /></li>
+              <li id="drop-down-features" class="drop-down-features">
+                Features<img src="./images/icon-arrow-down.svg" alt="" />
+              </li>
+              <li id="drop-down-company" class="drop-down-company">
+                Company<img src="./images/icon-arrow-down.svg" alt="" />
+              </li>
               <li>Careers</li>
               <li>About</li>
             </ul>
           </div>
           <div id="features-drop" class="features-drop hidden">
             <ul>
-              <li><img src="./images/icon-todo.svg" alt="">Todo List</li>
-              <li><img src="./images/icon-calendar.svg" alt="">Calendar</li>
-              <li><img src="./images/icon-reminders.svg" alt="">Reminders</li>
-              <li><img src="./images/icon-planning.svg" alt="">Planning</li>
+              <li><img src="./images/icon-todo.svg" alt="" />Todo List</li>
+              <li><img src="./images/icon-calendar.svg" alt="" />Calendar</li>
+              <li><img src="./images/icon-reminders.svg" alt="" />Reminders</li>
+              <li><img src="./images/icon-planning.svg" alt="" />Planning</li>
             </ul>
           </div>
           <div id="company-drop" class="company-drop hidden">
